pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec__574-images.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 157
expression: "replace_system_specific_urls(render_to_string(markdown_file, &dumb_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/574-images.md
---
foo bar[1][2]

[1]: /url
[2]: /url2
